# diffstride

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
diffstride/: pooling.py  resnet.py
diffstride/examples/: cifar10.gin  data.py  external_configurables.py  main.py  train.py
tests/: pooling_test.py  resnet_test.py
