[metadata]
name                          = diffstrifde
version                       = 0.0.1
licens                        = Apache 2.0
license_files                 = LICENSE
author                        = Google LLC
description                   = Learnable stride for ConvNets.
keywords                      = convnet, deep learning, signal processing
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/google-research/diffstride
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests, docs, images